Compiler Design Practical 1

--- a/Machine Learning/Practical_4.ipynb
+++ b/Machine Learning/Practical_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -41,9 +41,9 @@
     "    magnitudeOfList2 = 0\n",
     "\n",
     "    for index in range(listLen):\n",
-    "        dotProduct = dotProduct + (list1[index] * list2[index])\n",
-    "        magnitudeOfList1 = magnitudeOfList1 + (list1[index] ** 2)\n",
-    "        magnitudeOfList2 = magnitudeOfList2 + (list2[index] ** 2)\n",
+    "        dotProduct += (list1[index] * list2[index])\n",
+    "        magnitudeOfList1 += (list1[index] ** 2)\n",
+    "        magnitudeOfList2 += (list2[index] ** 2)\n",
     "    \n",
     "    return dotProduct / (math.sqrt(magnitudeOfList1) * math.sqrt(magnitudeOfList2))\n",
     "\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
     "    euclideanSum = 0\n",
     "\n",
     "    for index in range(listLen):\n",
-    "        euclideanSum = euclideanSum + ((list1[index] - list2[index]) ** 2)\n",
+    "        euclideanSum += ((list1[index] - list2[index]) ** 2)\n",
     "\n",
     "    return math.sqrt(euclideanSum)\n",
     "\n",
